objects/AcctSeed__Financial_Suite_Analytics_Schema__c/AcctSeed__Financial_Suite_Analytics_Schema__c.object-meta.xml
<CustomObject>
    <label>Financial Suite Analytics Schema</label>
    <nameField>
        <label>Financial Suite Analytics Schema</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Suite Analytics Schemas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>