objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Account_Industry__c</fullName>
    <label>Account Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>