objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AccountId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AccountId__c</fullName>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>