objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Accounting_Active__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounting Active</label>
    <type>Checkbox</type>
</CustomField>