objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Accounting_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Type__c</fullName>
    <label>Accounting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>