objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AccountingPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AccountingPeriodEndDate__c</fullName>
    <label>Accounting Period End Date</label>
    <type>Date</type>
</CustomField>