objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AccountingPeriodId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AccountingPeriodId__c</fullName>
    <label>Accounting Period Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>