objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AccountingPeriodName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AccountingPeriodName__c</fullName>
    <label>Accounting Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>