objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AccountingPeriodQuarter__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AccountingPeriodQuarter__c</fullName>
    <label>Accounting Period Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>