objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AccountingPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AccountingPeriodStartDate__c</fullName>
    <label>Accounting Period Start Date</label>
    <type>Date</type>
</CustomField>