objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AccountingPeriodStatus__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AccountingPeriodStatus__c</fullName>
    <label>Accounting Period Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>