objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AccountingPeriodYear__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AccountingPeriodYear__c</fullName>
    <label>Accounting Period Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>