objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AccountName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AccountName__c</fullName>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>