objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AmortizationEntryId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AmortizationEntryId__c</fullName>
    <label>Amortization Entry Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>