objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__AmortizationEntryName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AmortizationEntryName__c</fullName>
    <label>Amortization Entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>