objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__APDisbursementId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__APDisbursementId__c</fullName>
    <label>AP Disbursement Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>