objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__APDisbursementName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__APDisbursementName__c</fullName>
    <label>AP Disbursement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>