objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Billing_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Due_Date__c</fullName>
    <label>Billing Due Date</label>
    <type>Date</type>
</CustomField>