objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Street__c</fullName>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>