objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__BillingCashReceiptId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__BillingCashReceiptId__c</fullName>
    <label>Billing Cash Receipt Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>