objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__BillingCashReceiptName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__BillingCashReceiptName__c</fullName>
    <label>Billing Cash Receipt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>