objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__BillingId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__BillingId__c</fullName>
    <label>Billing Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>