objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__BillingLineId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__BillingLineId__c</fullName>
    <label>Billing Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>