objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__BillingLineName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__BillingLineName__c</fullName>
    <label>Billing Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>