objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__BillingName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__BillingName__c</fullName>
    <label>Billing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>