objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__CashDisbursementId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__CashDisbursementId__c</fullName>
    <label>Cash Disbursement Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>