objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__CashDisbursementName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__CashDisbursementName__c</fullName>
    <label>Cash Disbursement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>