objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__CashFlowCategoryId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__CashFlowCategoryId__c</fullName>
    <label>Cash Flow Category Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>