objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__CashFlowCategoryName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__CashFlowCategoryName__c</fullName>
    <label>Cash Flow Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>