objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__CashReceiptId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__CashReceiptId__c</fullName>
    <label>Cash Receipt Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>