objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__CashReceiptName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__CashReceiptName__c</fullName>
    <label>Cash Receipt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>