objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__CheckNumber__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__CheckNumber__c</fullName>
    <label>Check Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>