objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__ContactId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ContactId__c</fullName>
    <label>Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>