objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__ContactName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ContactName__c</fullName>
    <label>Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>