objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__CurrencyConversionRate__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__CurrencyConversionRate__c</fullName>
    <label>Currency Conversion Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>