objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>