objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__EmployeeId__c</fullName>
    <label>Employee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>