objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__EmployeeName__c</fullName>
    <label>Employee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>