objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__ForeignAmount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ForeignAmount__c</fullName>
    <label>Foreign Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>