objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__ForeignCurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ForeignCurrencyIsoCode__c</fullName>
    <label>Foreign Currency Iso Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>