objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__GLAccountCategory__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GLAccountCategory__c</fullName>
    <label>GL Account Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>