objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__GLAccountId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GLAccountId__c</fullName>
    <label>GL Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>