objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__GLAccountName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GLAccountName__c</fullName>
    <label>GL Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>