objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__GLAccountSubType2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GLAccountSubType2__c</fullName>
    <label>GL Account Sub Type 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>