objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__GLAccountType__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GLAccountType__c</fullName>
    <label>GL Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>