objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__GLAV1Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GLAV1Name__c</fullName>
    <label>GL Variable 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>