objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__GLAV2Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GLAV2Id__c</fullName>
    <label>GL Variable 2 Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>