objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__JournalEntryLineId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__JournalEntryLineId__c</fullName>
    <label>Journal Entry Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>