objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__JournalEntryLineName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__JournalEntryLineName__c</fullName>
    <label>Journal Entry Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>