objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Ledger_Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger_Currency_ISO_Code__c</fullName>
    <label>Ledger Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>