objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__LedgerId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__LedgerId__c</fullName>
    <label>Ledger Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>