objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__LedgerName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__LedgerName__c</fullName>
    <label>Ledger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>