objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Note__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Note__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>