objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Payable_Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payable_Balance__c</fullName>
    <label>Payable Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>