objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Payable_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payable_Due_Date__c</fullName>
    <label>Payable Due Date</label>
    <type>Date</type>
</CustomField>