objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__PayableId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__PayableId__c</fullName>
    <label>Payable Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>