objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__PayableLineId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__PayableLineId__c</fullName>
    <label>Payable Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>