objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__PayableLineName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__PayableLineName__c</fullName>
    <label>Payable Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>