objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__PayableName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__PayableName__c</fullName>
    <label>Payable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>