objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Product2Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Product2Id__c</fullName>
    <label>Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>