objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Product2Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Product2Name__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>