objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Product_Family__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Product_Family__c</fullName>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>