objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__ProjectId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ProjectId__c</fullName>
    <label>Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>