objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__ProjectName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ProjectName__c</fullName>
    <label>Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>