objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__ProjectTaskId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ProjectTaskId__c</fullName>
    <label>Project Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>