objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__ProjectTaskName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ProjectTaskName__c</fullName>
    <label>Project Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>