objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Quantity__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>