objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__RelatedTo__c</fullName>
    <label>RelatedTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>