objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__ReportAmount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ReportAmount__c</fullName>
    <label>Report Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>