objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>