objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Shipping_Postal_Code__c</fullName>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>