objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>