objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Source_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Source_Document_Id__c</fullName>
    <label>Source Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>