objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Source_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Source_Document_Name__c</fullName>
    <label>Source Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>