objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__SourceId__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__SourceId__c</fullName>
    <label>Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>