objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__SourceName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__SourceName__c</fullName>
    <label>Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>