objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__SourceType__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__SourceType__c</fullName>
    <label>Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>