objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__TimeCardDay__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__TimeCardDay__c</fullName>
    <label>Time Card Day Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>