objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__TimeCardDayName__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__TimeCardDayName__c</fullName>
    <label>Time Card Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>