objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__TimeCardVariable1Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__TimeCardVariable1Id__c</fullName>
    <label>Time Card Variable 1 Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>