objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__TimeCardVariable1Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__TimeCardVariable1Name__c</fullName>
    <label>Time Card Variable 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>