objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Total_Billing__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total_Billing__c</fullName>
    <label>Total Billing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>