objects/AcctSeed__Financial_Suite_Analytics_Schema__c/fields/AcctSeed__Transaction_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Transaction_Posting_Date__c</fullName>
    <label>Transaction Posting Date</label>
    <type>Date</type>
</CustomField>