objects/AcctSeed__Financial_Suite_Analytics_Schema__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__SourceName__c</columns>
    <columns>AcctSeed__SourceType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>